--- a/index.html
+++ b/index.html
@@ -203,15 +203,13 @@
   			  <tr>
   	              <td width=400px>
   					<center>
-  	                	<a href="./resources/images/img1.png"><img class="rounded" src = "./resources/images/teaser.png" height="500px"></img></href></a><br>
+  	                	<a href="./resources/images/teaser-v3-1.png"><img class="rounded" src = "./resources/images/teaser-v3-1.png" height="500px"></img></href></a><br>
 					</center>
   	              </td>
                 </tr>
   	              <td width=400px>
   					<center>
-  	                	<span style="font-size:14px"><i>Video Clip of our Touch and Go Dataset. Our dataset contains synchronized video that human is
-							touching an object using GelSight, a tactile sensor. During each touch of an object, the gels on the GelSight
-							sensor will deform and we obtain out tactile signal by observing the deformation.</i>
+  	                	<span style="font-size:14px"><i>We collect a dataset of real-world visual and touch data. (a) Humans walk through a large number of scenes, probing objects around them with a touch sensor and recording video. We apply this dataset to: (b) learning tactile features through self-supervision, by associating touch with sight, (c) manipulating an image to match the tactile signal (e.g., restyling a smooth surface to match the tactile signal for a rough rock, whose photo we show for reference), (d) predicting future tactile signals from visuo-tactile inputs.</i>
 					</center>
   	              </td>
 
