add dataset comparison

--- a/index.html
+++ b/index.html
@@ -386,6 +386,29 @@
 		<br><br>
 		<hr>
 		<br><br>
+		
+		<center><h1>Comparison to Other Datasets</h1></center>
+		To help understand the differences between our dataset and those of previous work: Object Folder 2.0, which contains virtual objects, and two robotic datasets: 
+		Feeling of Success, and VisGel.
+		We show examples from indoor scenes, since the other datasets do not contain outdoor scenes, and with rigid materials (since the virtual scenes do not contain deformable materials). Each row illustrates objects which are composed of similar materials, along with their corresponding GelSight images.
+		<br><br>
+		
+		<center>
+			<a href="./resources/images/dataset_comparison.png"><img class="rounded" src = "./resources/images/dataset_comparison.png" height="400px" width="1000px"></img></href></a><br>
+		</center>
+		
+			
+		<td width=400px>
+			<center>
+				<span style="font-size:14px"><i>We provide qualitative examples of 
+					visual and tactile data from other datasets (left), along with examples 
+					from similar material taken from our dataset (right).</i>
+		  </center>
+		</td>
+
+		<br><br>
+		<hr>
+		<br><br>
 		<center><h1>Acknowledgements</h1></center>
 		We thank Xiaofeng Guo and Yufan Zhang for the extensive help with the GelSight sensor, and thank Daniel Geng, Yuexi Du and Zhaoying Pan for the helpful discussions. This work was supported in part by Cisco Systems.
 		The webpage template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> for <a href="http://richzhang.github.io/colorization/">Colorization</a> project.
