--- a/index.html
+++ b/index.html
@@ -231,8 +231,16 @@
 		<table align=center width=850px>
 			<center><h1>Dataset</h1></center>
 	    </table>
-		
 		<center style="font-size:20px"><a href='https://drive.google.com/drive/folders/1NDasyshDCL9aaQzxjn_-Q5MBURRT360B'> [Download Link]</a></center><br>
+		
+		<div>
+			<center><h3>Demonstration Video</h3></center>
+			<center>	<video controls class="html-video" width="960" height="504"><source src="./resources/video/fade.mp4" type="video/mp4"></video> </center>
+			
+		</div>
+
+		<br><br>
+
         <div align=center width=100%>
             <p  style="text-align: left; width: 100%" >
                 <b>Touch and Go Dataset</b> &nbsp &nbsp &nbsp We collect a dataset of natural vision-and-touch signals. Our dataset contains multimodal data
