--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
 				Each raw video folder in the <em>Dataset</em> folder consists of six items:<br><br>
 				&emsp;&emsp;<item><tt>video.mp4</tt>:  Raw RGB video recording the interaction of human probing objects.</item><br>
 				&emsp;&emsp;<item><tt>gelsight.mp4</tt>: Raw GelSight (tactile) video for objects.</item><br>
-				&emsp;&emsp;<item><tt>time1.mp4</tt>:  The recording time for each frame in ''video.mp4''.</item><br>
-				&emsp;&emsp;<item><tt>time2.mp4</tt>:  The recording time for each frame in ''gelsight.mp4''.</item><br>
+				&emsp;&emsp;<item><tt>time1.npy</tt>:  The recording time for each frame in ''video.mp4''.</item><br>
+				&emsp;&emsp;<item><tt>time2.npy</tt>:  The recording time for each frame in ''gelsight.mp4''.</item><br>
 				&emsp;&emsp;<item><tt>video_frame</tt>:  The folder containing all the frames in ''video.mp4''. (Generated after running <tt>extract_frame.py</tt>)</item><br>
 				&emsp;&emsp;<item><tt>gelsight_frame</tt>:  The folder containing all the frames in ''gelsight.mp4''. (Generated after running <tt>extract_frame.py</tt>)</item><br>
             </p>
