--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 			</tr>
 
 			<tr class="spaceUnder">
-				<td style="font-size:20px">tree</td>
+				<td style="font-size:20px">Tree</td>
 				<td>
 					<a href="./resources/images/tree_eg.png"><img id="tree" class="rounded" src = "./resources/images/tree_eg.png" height="120px"></img></href></a>
 				</td>
