reduce stylization, move demonstration video

--- a/index.html
+++ b/index.html
@@ -374,7 +374,13 @@
   	              </td>
 
   		  </table>
-
+		
+		  	<br><br>
+			<div>
+				<center><h1>Demonstration Video</h3></center>
+				<center> <iframe width="960" height="504" src="https://www.youtube.com/embed/6kdPmmWrGz4"> </center></iframe>
+				
+			</div>
 
   		  <table align=center width=850px>
 	  		  <center><h1>Abstract</h1></center>
@@ -387,6 +393,8 @@
   		  <br><br>
 		  <hr>
 
+		  
+		  <center><h1>Stylization</h1></center>
 
 		  <table align=center style="width:100%">
 			<tr class="spaceUnder">
@@ -404,21 +412,19 @@
 			</tr>
 
 			
-			<tr class="spaceUnder">
+			<!-- <tr class="spaceUnder">
 				<td style="font-size:20px">Brick</td>
 				<td>
 					<a href="./resources/images/brick_eg.png"><img id="brick" class="rounded" src = "./resources/images/brick_eg.png" height="120px"></img></href></a>
 				</td>
 				<td>
-					<!-- <div class="wrapper"> -->
 						<img id="brick_img1" src='./resources/images/to_brick/1.png' height=113px/>
 						<img id="brick_img2" src='./resources/images/to_brick/2.png' height=113px />
 						<img id="brick_img3" src='./resources/images/to_brick/3.png' height=113px/>
 						<img id="brick_img4" src='./resources/images/to_brick/4.png' height=113px/>
 						<img id="brick_img5" src='./resources/images/to_brick/5.png' height=113px/>
-					<!-- </div> -->
 				</td>
-			</tr>
+			</tr> -->
 
 			<tr class="spaceUnder">
 				<td style="font-size:20px">Concrete</td>
@@ -468,37 +474,33 @@
 				</td>
 			</tr>
 
-			<tr class="spaceUnder">
+			<!-- <tr class="spaceUnder">
 				<td style="font-size:20px">Plants</td>
 				<td>
 					<a href="./resources/images/plant_eg.png"><img id="plants" class="rounded" src = "./resources/images/plant_eg.png" height="120px"></img></href></a>
 				</td>
 				<td>
-					<!-- <div class="wrapper"> -->
 						<img id="plants_img1" src='./resources/images/to_plants/1.png' height=113px/>
 						<img id="plants_img2" src='./resources/images/to_plants/2.png' height=113px />
 						<img id="plants_img3" src='./resources/images/to_plants/3.png' height=113px/>
 						<img id="plants_img4" src='./resources/images/to_plants/4.png' height=113px/>
 						<img id="plants_img5" src='./resources/images/to_plants/5.png' height=113px/>
-					<!-- </div> -->
 				</td>
-			</tr>
+			</tr> -->
 
-			<tr class="spaceUnder">
+			<!-- <tr class="spaceUnder">
 				<td style="font-size:20px">Tree</td>
 				<td>
 					<a href="./resources/images/tree_eg.png"><img id="tree" class="rounded" src = "./resources/images/tree_eg.png" height="120px"></img></href></a>
 				</td>
 				<td>
-					<!-- <div class="wrapper"> -->
 						<img id="tree_img1" src='./resources/images/to_tree/1.png' height=113px/>
 						<img id="tree_img2" src='./resources/images/to_tree/2.png' height=113px />
 						<img id="tree_img3" src='./resources/images/to_tree/3.png' height=113px/>
 						<img id="tree_img4" src='./resources/images/to_tree/4.png' height=113px/>
 						<img id="tree_img5" src='./resources/images/to_tree/5.png' height=113px/>
-					<!-- </div> -->
 				</td>
-			</tr>
+			</tr> -->
 
 		  </table>
 
@@ -668,13 +670,7 @@
 			<center><h1>Dataset</h1></center>
 	    </table>
 		<center style="font-size:20px"><a href='https://drive.google.com/drive/folders/1NDasyshDCL9aaQzxjn_-Q5MBURRT360B'> [Download Link]</a></center><br>
-		
-		<div>
-			<center><h3>Demonstration Video</h3></center>
-			<center> <iframe width="960" height="504" src="https://www.youtube.com/embed/6kdPmmWrGz4"> </center>
-</iframe>
-			
-		</div>
+
 
 		<br><br>
 	<center><h3>Videos Classified by Labels</h3></center>
