--- a/index.html
+++ b/index.html
@@ -284,39 +284,40 @@
 	  		  <table align=center width=700px>
 	  			  <tr>
 	  	              <td align=center width=200px>
-	  					<center><span style="font-size:24px">Fengyu Yang*</a></span></center>
+	  					<center><span style="font-size:20px">Fengyu Yang*</a></span></center>
 		  		  	  </td>
 	  	              <td align=center width=200px>
-	  					<center><span style="font-size:24px">Chenyang Ma*</a></span>	</center>
+	  					<center><span style="font-size:20px">Chenyang Ma*</a></span>	</center>
 		  		  	  </td>
 	  	              <td align=center width=200px>
-	  					<center><span style="font-size:24px">Jiacheng Zhang</a></span></center>
+	  					<center><span style="font-size:20px">Jiacheng Zhang</a></span></center>
 		  		  	  </td>
 					  
 					  <td align=center width=200px>
-						<center><span style="font-size:24px">Jing Zhu</a></span></center>
+						<center><span style="font-size:20px">Jing Zhu</a></span></center>
 					  </td>
 
 			  </table>
 			  <table align=center width=400px>
 				  <tr>
 					<td align=center width=200px>
-					  <center><span style="font-size:24px">Wenzhen Yuan</a></span></center>
+					  <center><span style="font-size:20px">Wenzhen Yuan</a></span></center>
 					</td>
 
 					<td align=center width=200px>
-					  <center><span style="font-size:24px">Andrew Owens</a></span></center>
+					  <center><span style="font-size:20px">Andrew Owens</a></span></center>
 					</td>
 			</table>
-          		<!-- <span style="font-size:30px">ECCV 2016.</span> -->
-
+			<br>
+          		<span style="font-size:20px"> NeurIPS 2022 Datasets and Benchmarks</span>
+			<br><br>
 	  		  <table align=center width=650px>
 	  			  <tr>
 	  	              <td align=center width=150px>
 	  					<center>
-							<span style="font-size:24px"><a href='https://openreview.net/forum?id=ZZ3FeSSPPblo'> [Paper]</a></span>
+							<span style="font-size:20px"><a href='https://openreview.net/forum?id=ZZ3FeSSPPblo'> [Paper]</a></span>
 							&nbsp&nbsp&nbsp&nbsp&nbsp
-	  						<span style="font-size:24px"><a href='https://drive.google.com/drive/folders/1NDasyshDCL9aaQzxjn_-Q5MBURRT360B'> [Dataset]</a></span>
+	  						<span style="font-size:20px"><a href='https://drive.google.com/drive/folders/1NDasyshDCL9aaQzxjn_-Q5MBURRT360B'> [Dataset]</a></span>
 							  &nbsp&nbsp&nbsp&nbsp&nbsp
 		  		  		</center>
 		  		  	  </td>
