stylzation typo on first column

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 			images to match tactile inputs, such as by making surfaces rougher or smoother, or by creating
 			“hybrid” materials (e.g., adding grass to a surface).
 			<br><br>
-			Hover over each row to see how the pictures change according to the first row!
+			Hover over each row to see how the pictures change according to the first column!
 			<br><br>
 
 			<table align=center style="width:100%" class='paddingBetweenRows'>
