add personal homepages

--- a/index.html
+++ b/index.html
@@ -291,28 +291,28 @@
 	  		  <table align=center width=700px>
 	  			  <tr>
 	  	              <td align=center width=200px>
-	  					<center><span style="font-size:20px">Fengyu Yang*</a></span></center>
+	  					<center><span style="font-size:20px"><a href="https://fredfyyang.github.io/">Fengyu Yang*</a></span></center>
 		  		  	  </td>
 	  	              <td align=center width=200px>
-	  					<center><span style="font-size:20px">Chenyang Ma*</a></span>	</center>
+	  					<center><span style="font-size:20px"><a href="https://www.linkedin.com/in/chenyang-ma-66945091/">Chenyang Ma*</a></span>	</center>
 		  		  	  </td>
 	  	              <td align=center width=200px>
-	  					<center><span style="font-size:20px">Jiacheng Zhang</a></span></center>
+	  					<center><span style="font-size:20px"><a href="https://www.linkedin.com/in/jiacheng-zhang-689b8319a/?trk=public_profile_browsemap">Jiacheng Zhang</a></span></center>
 		  		  	  </td>
 					  
 					  <td align=center width=200px>
-						<center><span style="font-size:20px">Jing Zhu</a></span></center>
+						<center><span style="font-size:20px"><a href="https://jwzhi.github.io/">Jing Zhu</a></span></center>
 					  </td>
 
 			  </table>
 			  <table align=center width=400px>
 				  <tr>
 					<td align=center width=200px>
-					  <center><span style="font-size:20px">Wenzhen Yuan</a></span></center>
+					  <center><span style="font-size:20px"><a href="http://robotouch.ri.cmu.edu/yuanwz/">Wenzhen Yuan</a></span></center>
 					</td>
 
 					<td align=center width=200px>
-					  <center><span style="font-size:20px">Andrew Owens</a></span></center>
+					  <center><span style="font-size:20px"><a href="https://andrewowens.com/">Andrew Owens</a></span></center>
 					</td>
 			</table>
 			<br>
