concatenate untrimmed video and encode from youtube

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 							&nbsp&nbsp&nbsp&nbsp&nbsp
 	  						<span style="font-size:20px"><a href='https://drive.google.com/drive/folders/1NDasyshDCL9aaQzxjn_-Q5MBURRT360B'> [Dataset]</a></span>
 							  &nbsp&nbsp&nbsp&nbsp&nbsp
-	  						<span style="font-size:20px"><a href='https://github.com/fredfyyang/Tactile-Driven-Image-Stylization/'> [Github]</a></span>
+	  						<span style="font-size:20px"><a href='https://github.com/fredfyyang/Tactile-Driven-Image-Stylization/'> [Code]</a></span>
 		  		  		</center>
 		  		  	  </td>
 	  			  <tr>
@@ -361,9 +361,10 @@
 		<div class="row">
 
 			<div class="column">
-				<video controls class="html-video" width="512" height="201.6"><source src="./resources/video/comb_long1.mp4" type="video/mp4"></video>
+				<!-- <video controls class="html-video" width="512" height="201.6"><source src="./resources/video/comb_long1.mp4" type="video/mp4"></video>
 				<br><br>
-				<video controls class="html-video" width="512" height="201.6"><source src="./resources/video/comb_long2.mp4" type="video/mp4"></video>
+				<video controls class="html-video" width="512" height="201.6"><source src="./resources/video/comb_long2.mp4" type="video/mp4"></video> -->
+				<iframe width="512" height="403.2" src="https://www.youtube.com/embed/XzBipq6fkAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br>
 				<span style="font-size:16px"><i>Untrimmed video examples from our dataset</i>	
 			</div>
