--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 		<center><h3>Human-Powered Data Collection</h3></center>
 		<div class="row">
 
-			<div class="column">
+			<div class="column" style="padding-left:50px">
 				<!-- <video controls class="html-video" width="512" height="201.6"><source src="./resources/video/comb_long1.mp4" type="video/mp4"></video>
 				<br><br>
 				<video controls class="html-video" width="512" height="201.6"><source src="./resources/video/comb_long2.mp4" type="video/mp4"></video> -->
