--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 		
 		
 		<center>
-			<a href="./resources/images/comparison_vshort.svg"><img class="rounded" src = "./resources/images/comparison_vshort.svg" object-fit='cover' height="480px" width="1000px"></img></href></a><br>
+			<a href="./resources/images/comparison_new.png"><img class="rounded" src = "./resources/images/comparison_new.png" object-fit='cover' height="440px" width="1000px"></img></href></a><br>
 		</center>
 		<td width=400px>
 			<center>
