--- a/index.html
+++ b/index.html
@@ -473,17 +473,17 @@
 			images to match tactile inputs, such as by making surfaces rougher or smoother, or by creating
 			“hybrid” materials (e.g., adding grass to a surface).
 			<br><br>
-			Hover over each row to make the right pictures look like the left tactile input.
+			<b>Hover over each row to make the right pictures look like the left tactile input.</b>
 			<br><br>
 
 			<table align=center style="width:100%" class='paddingBetweenRows'>
 			  <tr class="spaceUnder">
 				  <td style="font-size:20px">Stone</td>
 				  <td><a href="./resources/images/stone_eg.png"><img name="stone" class="rounded" src = "./resources/images/stone_eg.png" height="150px"></img></href></a></td>
-				  
-				  <td style="padding-left: 80px;">
+				  <td>
+					      <p style='font-size:40px;float: left;'>&#8594;</p>
+						  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="stone" id="stone_img2" src='./resources/images/to_stone/2.png'  height="150px"/>
-						  &nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="stone" id="stone_img3" src='./resources/images/to_stone/3.png'  height="150px"/>
 						  <!-- <img id="stone_img5" src='./resources/images/to_stone/5.png'  height="100px"/> -->
 				  </td>
@@ -493,10 +493,10 @@
 				  <td style="font-size:20px">Concrete</td>
 				  <td>
 					  <a href="./resources/images/concrete_eg.png"><img name="concrete" id="concrete" class="rounded" src = "./resources/images/concrete_eg.png" height="150px"></img></href></a>
-				  </td>
-				  <td style="padding-left: 80px;">
+					  <td>
+						  <p style='font-size:40px;float: left;'>&#8594;</p>
+						  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="concrete" id="concrete_img3" src='./resources/images/to_concrete/3.png' height=150px/>
-						  &nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="concrete" id="concrete_img4" src='./resources/images/to_concrete/4.png' height=150px/>
 						  <!-- <img id="concrete_img2" src='./resources/images/to_concrete/2.png' height=100px /> -->
 				  </td>
@@ -506,10 +506,10 @@
 				  <td style="font-size:20px">Fabric</td>
 				  <td>
 					  <a href="./resources/images/fabric_eg.png"><img name="fabric" id="fabric" class="rounded" src = "./resources/images/fabric_eg.png" height="150px"></img></href></a>
-				  </td>
-				  <td style="padding-left: 80px">
+					  <td>
+						  <p style='font-size:40px;float: left;'>&#8594;</p>
+						  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="fabric" id="fabric_img2" src='./resources/images/to_fabric/2.png' height=150px />
-						  &nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="fabric" id="fabric_img4" src='./resources/images/to_fabric/4.png' height=150px/>
 						  <!-- <img id="fabric_img5" src='./resources/images/to_fabric/5.png' height=100px/> -->
 				  </td>
@@ -519,10 +519,10 @@
 				  <td style="font-size:20px">Grass</td>
 				  <td>
 					  <a href="./resources/images/grass_eg.png"><img name="grass" id="grass" class="rounded" src = "./resources/images/grass_eg.png" height="150px"></img></href></a>
-				  </td>
-				  <td style="padding-left: 80px">
+					  <td>
+						  <p style='font-size:40px;float: left;'>&#8594;</p>
+						  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="grass" id="grass_img3" src='./resources/images/to_grass/3.png' height=150px/>
-						  &nbsp;&nbsp;&nbsp;&nbsp;
 						  <img name="grass" id="grass_img4" src='./resources/images/to_grass/4.png' height=150px/>
 						  <!-- <img id="grass_img5" src='./resources/images/to_grass/5.png' height=100px/> -->
 				  </td>
